--- a/templates/test/dataobject.vm
+++ b/templates/test/dataobject.vm
@@ -2,28 +2,33 @@ $!package("dal.$!{tablepath}")
 $!save("dal/$!{tablepath}/$!{TableName}DO.java")
 
 #set($tableFields = $filter($tableFields, ['id']))
-$!importTypes($tableFields)
 
+$!importTypes($tableFields)
 
 /***
  * $!{tableComment}
  */
 public class $!{TableName}DO {
+
   #foreach( $it in $tableFields )
+    
+    // $!{it.fieldComment}
     private ${it.type} ${it.field};
+
   #end
 
-
   #foreach( $it in $tableFields )
+    
     // $!{it.fieldComment}
     public void ${it.setField}(${it.type} ${it.field}) {
       this.${it.field} = ${it.field};
     }
 
-    public void ${it.getField}(}) {
+    public ${it.type} ${it.getField}(}) {
       return this.${it.field};
     }
 
     
   #end
+
 }
